--- a/vignettes/getting_started.Rmd
+++ b/vignettes/getting_started.Rmd
@@ -290,3 +290,8 @@ collect_metrics(knn_search) %>%
 ```
 
 With this intrinsically nonlinear model there is less reliance on the nonlinear terms created by the recipe. 
+
+```{r session}
+sessioninfo::session_info()
+```
+
