--- a/vignettes/getting_started.Rmd
+++ b/vignettes/getting_started.Rmd
@@ -16,6 +16,7 @@ knitr::opts_chunk$set(
 )
 options(digits = 3)
 library(tidymodels)
+library(kknn)
 theme_set(theme_bw())
 doParallel::registerDoParallel()
 ```
