--- a/vignettes/acquisition_functions.Rmd
+++ b/vignettes/acquisition_functions.Rmd
@@ -1,16 +1,19 @@
 ---
 title: "Acquisition Functions"
+output: rmarkdown::html_vignette
+description: |
+  This vignettes describes what acquisition functions are and how they are
+  used to guide how the parameter space should be explored during Bayesian 
+  optimization.
 vignette: >
   %\VignetteEngine{knitr::rmarkdown}
-  %\VignetteIndexEntry{Acquisition Function}
-output:
-  knitr:::html_vignette:
-    toc: yes
+  %\VignetteIndexEntry{Acquisition Functions}
+  %\VignetteEncoding{UTF-8}
 resource_files:
   - figures/initial.svg
   - figures/iter_1.svg
-  - figures/iter_20.svg  
-  - figures/trade_off_20.svg     
+  - figures/iter_20.svg
+  - figures/trade_off_20.svg
 ---
   
 ```{r setup, include=FALSE}
