--- a/vignettes/extras/optimizations.Rmd
+++ b/vignettes/extras/optimizations.Rmd
@@ -87,30 +87,14 @@ Also, when using a model formula, the model matrix is only created once per resa
 
 `tune` allows users, when possible, to use multiple cores or separate machines fit models. The package is currently able to parallelize over either the resampling loop of grid search (via `parallel_over = "resamples"` in `control_grid()`, the default) or both the resampling and preprocessing loops (via `parallel_over = "everything"`). When `parallel_over = "everything"`, an outer parallel loop will iterate over resamples and an inner parallel loop will iterate over all unique combinations of preprocessor and model tuning parameters for that specific resample. This will result in the preprocessor being re-processed multiple times, but can be faster if that preprocessing is extremely fast.
 
-The `foreach` package is used to facilitate parallel computations. `foreach` can use a variety of technologies to share the computations and the choice of technology is determined by which _parallel backend_ package is chosen (aka the `do{technology}` packages). For example, the `doMC` package uses the forking mechanism on *unix systems to split the computations across multiple cores. As of this writing, the backend packages are `doFuture`, `doMC`, `doMPI`, `doParallel`, `doRedis`, `doRNG`, `doSNOW`, and `doAzureParallel` (GitHub only). Of these, `doFuture` and `doParallel` are probably the most comprehensive and best supported.
+tune supports parallel processing using the [future](https://www.futureverse.org/) framework. future supports a variety of technologies to share the computations and the choice of technology is determined by the chosen _plan_. To run tuning code in parallel, just provide a `plan()` and tune will take care of the rest. For example:
 
-Registering a parallel backend is also somewhat dependent of the package. For `doParallel`, one could use:
-
-```{r doPar, eval = FALSE}
-all_cores <- parallel::detectCores(logical = FALSE)
-
-library(doParallel)
-cl <- makePSOCKcluster(all_cores)
-registerDoParallel(cl)
+```{r future, eval = FALSE}
+library(future)
+plan(multisession)
 ```
 
-Other options exist in `doParallel`.
-
-`doFuture` uses a function called `plan` to [declare the method](https://cran.r-project.org/web/packages/doFuture/vignettes/doFuture.html):
-
-```{r doFuture, eval = FALSE}
-all_cores <- parallel::detectCores(logical = FALSE)
-
-library(doFuture)
-registerDoFuture()
-cl <- makeCluster(all_cores)
-plan(cluster, workers = cl)
-```
+Before the 1.2.0 release, tune supported parallelism using the foreach framework. Support has been deprecated for backends registered for foreach and will be fully removed in an upcoming release.
 
 One downside to parallel processing is that the different technologies handle inputs and outputs differently. For example, multicore forking _tends_ to carry the loaded packages and objects into the worker processes. Others do not. To make sure that the correct packages are loaded (but not attached) in the workers is to use the `pkg` option in `control_grid()`. 
 
