--- a/vignettes/extras/optimizations.Rmd
+++ b/vignettes/extras/optimizations.Rmd
@@ -83,7 +83,7 @@ The same will be true for post-processing parameters being tuned. For each uniqu
 
 Also, when using a model formula, the model matrix is only created once per resample. 
 
-## Parallel Processing
+## Parallel processing
 
 `tune` allows users, when possible, to use multiple cores or separate machines fit models. The package is currently able to parallelize over either the resampling loop of grid search (via `parallel_over = "resamples"` in `control_grid()`, the default) or both the resampling and preprocessing loops (via `parallel_over = "everything"`). When `parallel_over = "everything"`, an outer parallel loop will iterate over resamples and an inner parallel loop will iterate over all unique combinations of preprocessor and model tuning parameters for that specific resample. This will result in the preprocessor being re-processed multiple times, but can be faster if that preprocessing is extremely fast.
 
@@ -94,7 +94,30 @@ library(future)
 plan(multisession)
 ```
 
-Before the 1.2.0 release, tune supported parallelism using the foreach framework. Support has been deprecated for backends registered for foreach and will be fully removed in an upcoming release.
+### foreach (legacy)
+
+Before the 1.2.0 release, tune supported parallelism using the foreach framework. Support has been deprecated for backends registered for foreach and will be fully removed in an upcoming release. foreach can use a variety of technologies to share the computations and the choice of technology is determined by which _parallel backend_ package is chosen (aka the `do{technology}` packages). For example, the `doMC` package uses the forking mechanism on Unix-like systems to split the computations across multiple cores. As of this writing, the backend packages are `doMC`, `doMPI`, `doParallel`, `doRedis`, `doSNOW`, and `doAzureParallel` (GitHub only).
+
+Registering a parallel backend is also somewhat dependent of the package. For `doParallel`, one could use:
+
+```{r doPar, eval = FALSE}
+all_cores <- parallel::detectCores(logical = FALSE)
+
+library(doParallel)
+cl <- makePSOCKcluster(all_cores)
+registerDoParallel(cl)
+```
+
+To **transition from foreach to future**, remove lines loading any foreach backend packages `library(do*)` as well as lines registering that technology with `registerDo*()`, and add the following lines:
+
+```{r future2, eval = FALSE}
+library(future)
+plan(multisession)
+```
+
+Switch out `multisession` for another strategy if desired.
+
+### In practice
 
 One downside to parallel processing is that the different technologies handle inputs and outputs differently. For example, multicore forking _tends_ to carry the loaded packages and objects into the worker processes. Others do not. To make sure that the correct packages are loaded (but not attached) in the workers is to use the `pkg` option in `control_grid()`. 
 
