--- a/vignettes/tune.Rmd
+++ b/vignettes/tune.Rmd
@@ -82,10 +82,10 @@ ames_rec <-
   step_ns(Latitude,  deg_free = tune("lat df"))
 ```
 
-The function `hardhat::extract_parameter_set_dials()` can detect and collect the parameters that have been flagged for tuning. *This method replaces the function `dials::parameters()` deprecated in tune 0.1.6.9003
+The function `extract_parameter_set_dials()` can detect and collect the parameters that have been flagged for tuning.
 
 ```{r p-set}
-hardhat::extract_parameter_set_dials(ames_rec)
+extract_parameter_set_dials(ames_rec)
 ```
 
 The `dials` package has default ranges for many parameters. The generic parameter function for `deg_free` has a fairly small range:
