--- a/vignettes/extras/optimizations.Rmd
+++ b/vignettes/extras/optimizations.Rmd
@@ -87,12 +87,22 @@ Also, when using a model formula, the model matrix is only created once per resa
 
 The tune package allows users, when possible, to use multiple cores or separate machines to fit models. The package is currently able to parallelize over either the resampling loop of grid search (via `parallel_over = "resamples"` in `control_grid()`, the default) or both the resampling and preprocessing loops (via `parallel_over = "everything"`). When `parallel_over = "everything"`, an outer parallel loop will iterate over resamples and an inner parallel loop will iterate over all unique combinations of preprocessor and model tuning parameters for that specific resample. This will result in the preprocessor being re-processed multiple times, but can be faster if that preprocessing is extremely fast.
 
-tune supports parallel processing using the [future](https://www.futureverse.org/) framework. future supports a variety of technologies to share the computations and the choice of technology is determined by the chosen _plan_. To run tuning code in parallel, just provide a `plan()` and tune will take care of the rest. For example:
+tune supports parallel processing using the [future](https://www.futureverse.org/) and [mirai](https://mirai.r-lib.org/) frameworks. future supports a variety of technologies to share the computations and the choice of technology is determined by the chosen _plan_. To run tuning code in parallel, just provide a `plan()` and tune will take care of the rest. For example:
 
 ```{r future, eval = FALSE}
 library(future)
 plan(multisession)
 ```
+
+For mirai, you can set the number of worker processes via
+
+```{r future, eval = FALSE}
+library(mirai)
+daemons(4)
+```
+
+For either parallel frameworks, you don't have to change your tidymodels code. 
+
 
 ### foreach (legacy)
 
